# hfst

./: .gitignore  .travis.yml  ChangeLog  ChangeLog.old  NEWS  README  README.rst  configure.ac
back-ends/foma/: apply.c  constructions.c  define.c  determinize.c  dynarray.c  fomalib.h  fomalibconf.h  iface.c  io.c  lex.cmatrix.c  lex.interface.c  lex.lexc.c  lex.yy.c  lexcread.c  minimize.c  regex.c  rewrite.c  sigma.c  structures.c  topsort.c
back-ends/sfst/: compact.cc  fst.cc
check_installation/: check-morphologies.sh  check-ospell.sh  check-python.sh  check-tools.sh  copy-python-tests.sh  copy-tool-tests.sh  dist-README  make-dist.sh  test-empty-input.sh  test-hfst-twolc.sh  test-hfst-xfst.sh
check_installation/morphology_tests/: english-analyze.output  english-analyze.output.old  finnish-analyze.output  finnish-analyze.output.old  french-analyze.output  german-analyze.output  italian-analyze.output  omorfi-analyze.output  swedish-analyze.output  turkish-analyze.output
doc/: Doxyfile
libhfst/: hfst.pc.in
libhfst/src/: HarmonizeUnknownAndIdentitySymbols.cc  HarmonizeUnknownAndIdentitySymbols.h  HfstApply.cc  HfstDataTypes.cc  HfstDataTypes.h  HfstExceptionDefs.cc  HfstExceptionDefs.h  HfstExtractStrings.h  HfstFlagDiacritics.cc  HfstFlagDiacritics.h  HfstInputStream.cc  HfstInputStream.h  HfstLookupFlagDiacritics.cc  HfstLookupFlagDiacritics.h  HfstOutputStream.cc  HfstOutputStream.h  HfstPrintDot.cc  HfstPrintDot.h  HfstPrintPCKimmo.cc  HfstPrintPCKimmo.h  HfstRules.cc  HfstStrings2FstTokenizer.cc  HfstSymbolDefs.cc  HfstSymbolDefs.h  HfstTokenizer.cc  HfstTokenizer.h  HfstTransducer.cc  HfstTransducer.h  HfstXeroxRules.cc  HfstXeroxRules.h  Makefile.am  hfst-string-conversions.cc  hfst_apply_schemas.h
man/: Makefile.am  hfst-reweight-tagger.1
python/: MANIFEST.in  Makefile.am  README  docstrings.i  hfst_extensions.cc  hfst_file_extensions.cc  hfst_lexc_extensions.cc  hfst_lookup_extensions.cc  hfst_pmatch_extensions.cc  hfst_prolog_extensions.cc  hfst_rules_extensions.cc  libhfst.i  pypi_setup.py  setup.py
python/doc/: Doxyfile  README  hfst.py  libhfst.py  xml2docstrings.sh
python/doc/hfst/: __init__.py
python/doc/hfst/exceptions/: __init__.py
python/doc/hfst/rules/: __init__.py
python/doc/hfst/types/: __init__.py
python/doc/hfst/xerox_rules/: __init__.py
python/hfst/: __init__.py
python/hfst/exceptions/: __init__.py
python/hfst/rules/: __init__.py
python/hfst/types/: __init__.py
python/hfst/xerox_rules/: __init__.py
python/pypi/: MANIFEST.in  README.rst  copy-files-win.sh  copy-files.sh  setup.py
python/test/: Makefile.am  examples.py  foo_att_prolog  streets.txt  test.bat  test.sh  test_att_reader.py  test_dir_hfst.py  test_dir_hfst_exceptions.py  test_dir_hfst_rules.py  test_dir_hfst_sfst_rules.py  test_examples.py  test_exceptions.py  test_hfst.py  test_pmatch.py  test_prolog.py  test_prolog_reader.py  test_read_att_transducer.py  test_streams_1.py  test_streams_2.py  test_streams_3.py  test_tokenizer.py  test_twolc.py  test_xerox_rules.py  test_xre.py  testfile1.hfst
scripts/: copy-for-windows.sh  hfst-foma-wrapper.sh.in  make-libhfst-dist.sh
scripts/windows/: make-hfst-lexc.bat  make-hfst-proc.bat  make-hfst-tool.bat  make-hfst-xfst.bat  make-htwolcpre1.bat  make-htwolcpre2.bat  make-htwolcpre3.bat  make-python-bindings.bat  make-python-package.bat
test/libhfst/: test_hfst_basic_transducer.cc  test_transducer_functions.cc
test/tools/: Makefile.am  hfst-check-help.sh  hfst-check-version.sh  lexc-compiler-functionality.sh  mismatching-input-streams.sh  (+19 more)
tools/src/hfst-twolc/src/: HfstTwolcDefs.h  Makefile.am  hfst-twolc.cc  htwolc-main.cc  htwolcpre1-main.cc  htwolcpre1-parser.yy  htwolcpre1.yy  htwolcpre2-lexer.ll  htwolcpre2-main.cc  htwolcpre2-parser.yy  htwolcpre2.yy  htwolcpre3-main.cc  htwolcpre3-parser.yy  htwolcpre3.yy  scanner1.ll  scanner2.ll  scanner3.ll
tools/src/hfst-twolc/src/commandline_src/: CommandLine.cc
tools/src/hfst-twolc/src/io_src/: InputReader.cc
tools/src/hfst-twolc/src/rule_src/: OtherSymbolTransducer.cc  OtherSymbolTransducer.h
tools/src/hfst-twolc/src/variable_src/: VariableContainer.h
(+195 files in other folders)
