# Copyright (c) 2016 University of Helsinki                          
#                                                                    
# This library is free software; you can redistribute it and/or      
# modify it under the terms of the GNU Lesser General Public         
# License as published by the Free Software Foundation; either       
# version 3 of the License, or (at your option) any later version.
# See the file COPYING included with this distribution for more      
# information.

SUBDIRS = test
EXTRA_DIST = libhfst.i README setup.py \
hfst_extensions.cc hfst_file_extensions.cc hfst_lexc_extensions.cc \
hfst_lookup_extensions.cc hfst_pmatch_extensions.cc hfst_prolog_extensions.cc \
hfst_regex_extensions.cc hfst_rules_extensions.cc hfst_xfst_extensions.cc \
hfst/__init__.py hfst/exceptions/__init__.py hfst/rules/__init__.py

AUTOMAKE_OPTIONS = subdir-objects
