EXTRA_DIST = README test.sh \
	test_fail.xfst testfile.att testfile_fail.att test_pass.xfst test.lexc foobar.hfst \
	test_pmatch.py test_prolog.py test_exceptions.py test_dir_hfst.py \
	test_dir_hfst_exceptions.py test_dir_hfst_rules.py test_tokenizer.py \
	test_read_att_transducer.py test_xre.py test_hfst.py examples.py \
	test_att_reader.py
